update hide key

--- a/GetLampStatus.html
+++ b/GetLampStatus.html
@@ -6,9 +6,9 @@
 
 <body>
     <script>
-        var APPID = "Home1669"; //enter your appid
-        var KEY = "gv3b3byGLJWITtI"; //enter your key
-        var SECRET = "nQ6hHpvvOirSE5ngxebIMf77D"; //enter your secret
+        var APPID = "Home1669xxxxxx"; //enter your appid
+        var KEY = "xxxxxxxx"; //enter your key
+        var SECRET = "xxxxxxxxx"; //enter your secret
         var Topic = "/LampStatus";
 
         function GetButtonStatus() {
