--- a/SetLampStatus.html
+++ b/SetLampStatus.html
@@ -2,9 +2,9 @@
 
 <body>
     <script>
-        var APPID = "Home1669"; //enter your appid
-        var KEY = "gv3b3byGLJWITtI"; //enter your key
-        var SECRET = "nQ6hHpvvOirSE5ngxebIMf77D"; //enter your secret
+        var APPID = "Home1669xxxxxxx"; //enter your appid
+        var KEY = "xxxxxxxx"; //enter your key
+        var SECRET = "xxxxxxxx"; //enter your secret
         var Topic = "/LampStatus";
 
         function PressButtonOn() {
